--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
   "homepage": "http://foundation.zurb.com",
   "dependencies": {
     "foundation-sites": "~6.1.0",
-    "motion-ui": "~1.1.0"
+    "motion-ui": "~1.1.0",
+    "jribbble": "~2.0.4"
   },
   "ignore": [
     "**/.*",
